[gd_scene load_steps=13 format=3 uid="uid://fwraimnd1ak3"]

[ext_resource type="Script" path="res://scenes/level/level.gd" id="1_86rg7"]
[ext_resource type="Texture2D" uid="uid://1604i64q0ing" path="res://assets/spritesheet.png" id="1_pu7na"]
[ext_resource type="PackedScene" uid="uid://cxn4oy2saksw3" path="res://scenes/player/player.tscn" id="2_ligcg"]
[ext_resource type="PackedScene" uid="uid://b1dvoj41o06cx" path="res://scenes/flame/flame.tscn" id="4_j7h22"]
[ext_resource type="Script" path="res://scenes/level/Camera2D.gd" id="4_ki171"]
[ext_resource type="PackedScene" uid="uid://crn5ehh3u2pgv" path="res://scenes/hud/hud.tscn" id="4_t2k7n"]
[ext_resource type="PackedScene" uid="uid://duemc5qhulqv4" path="res://scenes/game_over_ui/game_over_ui.tscn" id="5_ci0o5"]
[ext_resource type="PackedScene" uid="uid://hwphkb4hlywk" path="res://scenes/exit_menu/exit_menu.tscn" id="6_ra2hp"]
[ext_resource type="PackedScene" uid="uid://co3dbe68qe4v0" path="res://scenes/light_on/light_on.tscn" id="7_5wjqa"]
[ext_resource type="Texture2D" uid="uid://baf3fefoomoqb" path="res://assets/game_bg.png" id="10_ycoxw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uqweb"]
resource_name = "level_tiles"
texture = ExtResource("1_pu7na")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0

[sub_resource type="TileSet" id="TileSet_t8ltu"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_uqweb")

[node name="Level" type="Node2D"]
script = ExtResource("1_86rg7")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_t8ltu")
format = 2
layer_0/name = "Floor"
layer_0/tile_data = PackedInt32Array(-65537, 131072, 0, -131073, 131072, 0, -196608, 131072, 0, -196607, 131072, 0, -196606, 131072, 0, -196605, 131072, 0, -131074, 131072, 0, -131075, 131072, 0, -131072, 262144, 0, -131071, 262144, 0, -131070, 262144, 0, -131069, 65536, 0, -131068, 262144, 0, -65532, 589824, 0, -65533, 262144, 0, -65534, 262144, 0, -65535, 0, 0, -65536, 262144, 0, -1, 0, 0, 65533, 0, 0)
layer_1/name = "Walls"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Targets"
layer_2/tile_data = PackedInt32Array()
layer_3/name = "Boxes"
layer_3/tile_data = PackedInt32Array()

[node name="Player" parent="." instance=ExtResource("2_ligcg")]
unique_name_in_owner = true
animation = &"idle"
frame_progress = 0.0

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.7, 1.7)
position_smoothing_speed = 3.0
script = ExtResource("4_ki171")

[node name="ParallaxBackground" type="ParallaxBackground" parent="Player/Camera2D"]
scroll_offset = Vector2(32, 32)

[node name="ParallaxLayer" type="ParallaxLayer" parent="Player/Camera2D/ParallaxBackground"]

[node name="Flame" parent="Player" instance=ExtResource("4_j7h22")]
unique_name_in_owner = true
position = Vector2(30, 15)

[node name="LightOn" parent="Player" instance=ExtResource("7_5wjqa")]
unique_name_in_owner = true

[node name="Background" type="CanvasLayer" parent="Player"]
layer = -10

[node name="TextureRect" type="TextureRect" parent="Player/Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 268.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_ycoxw")
stretch_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("4_t2k7n")]

[node name="GameOverUi" parent="CanvasLayer" instance=ExtResource("5_ci0o5")]
visible = false

[node name="ExitMenu" parent="." instance=ExtResource("6_ra2hp")]
visible = false

[node name="Darkness" type="CanvasModulate" parent="."]
color = Color(0.208606, 0.280355, 0.440558, 1)

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
bus = &"Music"

[node name="FootstepsPlayer" type="AudioStreamPlayer2D" parent="."]
bus = &"Footsteps"

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"
